Fix gap below modal on mobile

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -56,6 +56,7 @@
 {
     position: fixed;
     inset: 0;
+    bottom: -100px;
     z-index: 5;
     display: none;
     align-items: flex-end;
@@ -111,7 +112,7 @@
     justify-content: center;
     padding: 12px 0 12px 0;
     cursor: grab;
-    background-color: var(--bg-white);
+    /* background-color: var(--bg-white); */
 }
 
 .modal-handle::after
